--- a/poslanci/poslanci.css
+++ b/poslanci/poslanci.css
@@ -1,9 +1,9 @@
 html,
 body {
   width: 100%;
-  height: 50vh;
-  max-height: 400px;
-  max-width: 300px;
+  height: 100%;
+  max-height: 600px;
+  max-width: 500px;
 }
 
 body {
@@ -153,15 +153,15 @@ body {
 .text-box {
   width: 90%;
   height: 80%;
-  margin-top: 10%;
-  margin-bottom: 10%;
+  margin-top: 4%;
+  margin-bottom: 5%;
   margin-left: 5%;
   margin-right: 5%;
-  font-size: 30px;
+  font-size: 26px;
   word-wrap: break-word;
   text-align: center;
   display: grid;
-  grid-template-rows: 20% 70%;
+  grid-template-rows: 10% 80%;
 }
 
 .progress-box {
