--- a/poslanci/poslanci.css
+++ b/poslanci/poslanci.css
@@ -78,11 +78,10 @@ body {
 }
 
 .main-box {
+  height: 100%;
   text-shadow: rgb(17, 17, 17) 2px 2px 10px;
   margin: 2%;
   border-radius: 6px;
-  display: grid;
-  grid-template-rows: 80% 20%;
 }
 
 .dropdown {
@@ -113,11 +112,10 @@ body {
 }
 
 .dropdown-content {
-  display: none;
+  display: block;
   width: 80%;
   margin-left: 10%;
   margin-right: 10%;
-  padding: 2%;
   background: #272727;
   position: absolute;
   min-width: 160px;
@@ -146,9 +144,7 @@ body {
   background: #832232;
 }
 
-.dropdown:hover .dropdown-content {
-  display: block;
-}
+
 
 .text-box {
   width: 90%;
