--- a/kalkulacka/poslanci.css
+++ b/kalkulacka/poslanci.css
@@ -2,6 +2,8 @@ html,
 body {
   width: 100%;
   height: 100vh;
+  max-height: 400px;
+  max-width: 400px;
 }
 
 body {
@@ -26,7 +28,7 @@ body {
 
 .btn-back {
   color: white;
-  font-size: 26px;
+  font-size: 22px;
   padding-left: 20%;
   padding-top: 10%;
   padding-bottom: 10%;
@@ -51,7 +53,7 @@ body {
   text-shadow: rgb(17, 17, 17) 2px 2px 10px;
 
   border-radius: 6px;
-  font-size: 26px;
+  font-size: 22px;
   width: 60%;
   margin-left: 20%;
   margin-right: 20%;
@@ -65,7 +67,7 @@ body {
   text-shadow: rgb(17, 17, 17) 2px 2px 10px;
   border-radius: 6px;
   text-align: center;
-  font-size: 20px;
+  font-size: 18px;
   padding: 2%;
 }
 
@@ -88,12 +90,11 @@ body {
   margin-top: 9%;
   margin-left: 10%;
   margin-right: 10%;
-  padding: 2%;
   background: #832232;
   border-color: #832232;
   border-radius: 6px;
   color: white;
-  font-size: 22px;
+  font-size: 18px;
   text-align: center;
   box-shadow: 0 0 3pt 2pt #832232;
 
@@ -128,7 +129,7 @@ body {
 .btn-start {
   display: block;
   background: #832232;
-  font-size: 36px;
+  font-size: 18px;
   text-align: center;
   width: 50%;
   margin-left: 22.5%;
@@ -154,7 +155,7 @@ body {
   margin-bottom: 10%;
   margin-left: 5%;
   margin-right: 5%;
-  font-size: 30px;
+  font-size: 24px;
   word-wrap: break-word;
   text-align: center;
   display: grid;
@@ -210,7 +211,7 @@ body {
   border-radius: 12px;
   text-align: center;
   cursor: pointer;
-  font-size: 22px;
+  font-size: 18px;
 }
 
 .btn:hover {
@@ -227,7 +228,7 @@ body {
 
 .all-question-title {
   text-shadow: rgb(17, 17, 17) 2px 2px 10px;
-  font-size: 30px;
+  font-size: 26px;
   padding: 2%;
 }
 .all-questions-btn-box {
@@ -236,7 +237,7 @@ body {
   margin-right: 20%;
   padding: 2.5%;
   text-align: center;
-  font-size: 28px;
+  font-size: 24px;
 }
 
 .btn-continue {
