--- a/poslanci/poslanci.css
+++ b/poslanci/poslanci.css
@@ -1,8 +1,8 @@
 html,
 body {
   width: 100%;
-  height: 100vh;
-  max-height: 400px;
+  height: 100%;
+  max-height: 50px;
   max-width: 400px;
 }
 
@@ -28,7 +28,7 @@ body {
 
 .btn-back {
   color: white;
-  font-size: 22px;
+  font-size: 24px;
   padding-left: 20%;
   padding-top: 10%;
   padding-bottom: 10%;
@@ -74,21 +74,23 @@ body {
 .main-wrapper {
   height: 100%;
   display: grid;
-  grid-template-rows: 85% 15%;
+  grid-template-rows: 70% 30%;
 }
 
 .main-box {
+  height: 100%;
   text-shadow: rgb(17, 17, 17) 2px 2px 10px;
   margin: 2%;
   border-radius: 6px;
-  
 }
 
 .dropdown {
+  display: block;
   width: 80%;
   margin-top: 9%;
   margin-left: 10%;
   margin-right: 10%;
+  padding: 2%;
   background: #832232;
   border-color: #832232;
   border-radius: 6px;
@@ -114,10 +116,10 @@ body {
   width: 80%;
   margin-left: 10%;
   margin-right: 10%;
-  padding: 2%;
   background: #272727;
   position: absolute;
   min-width: 160px;
+  padding: 12px 16px;
   z-index: 1;
 }
 .btn-box {
@@ -127,7 +129,7 @@ body {
 .btn-start {
   display: block;
   background: #832232;
-  font-size: 18px;
+  font-size: 28px;
   text-align: center;
   width: 50%;
   margin-left: 22.5%;
@@ -142,22 +144,20 @@ body {
   background: #832232;
 }
 
-.dropdown:hover .dropdown-content {
-  display: block;
-}
+
 
 .text-box {
   width: 90%;
   height: 80%;
-  margin-top: 10%;
-  margin-bottom: 10%;
+  margin-top: 4%;
+  margin-bottom: 5%;
   margin-left: 5%;
   margin-right: 5%;
-  font-size: 24px;
+  font-size: 22px;
   word-wrap: break-word;
   text-align: center;
   display: grid;
-  grid-template-rows: 20% 70%;
+  grid-template-rows: 10% 80%;
 }
 
 .progress-box {
@@ -226,7 +226,7 @@ body {
 
 .all-question-title {
   text-shadow: rgb(17, 17, 17) 2px 2px 10px;
-  font-size: 26px;
+  font-size: 30px;
   padding: 2%;
 }
 .all-questions-btn-box {
@@ -235,7 +235,7 @@ body {
   margin-right: 20%;
   padding: 2.5%;
   text-align: center;
-  font-size: 24px;
+  font-size: 26px;
 }
 
 .btn-continue {
@@ -255,7 +255,7 @@ body {
   grid-auto-rows: auto;
   padding: 2%;
   color: white;
-  font-size: 22px;
+  font-size: 20px;
 }
 
 .container input:checked ~ .checkmark {
