--- a/kalkulacka/style.css
+++ b/kalkulacka/style.css
@@ -2,6 +2,8 @@ html,
 body {
   width: 100%;
   height: 100vh;
+  max-height: 400px;
+  max-width: 400px;
 }
 
 body {
@@ -13,67 +15,68 @@ body {
     rgba(0, 0, 0, 0.7)
   ), url("https://a-static.projektn.sk/2017/07/TBEN6292-3.jpg");
   background-clip: content-box;
-  background-size: 300%;
+  background-size: 350%;
   background-position: 50%;
 }
 
+
 .app {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   color: white;
-  
 }
 
-.intro-wrapper {
-  display: grid;
-  grid-template-rows: 70% 30%;
-  height: 100%;
-}
+
 
 .btn-back {
   color: white;
-  font-size: 26px;
+  font-size: 22px;
   padding-left: 20%;
   padding-top: 10%;
   padding-bottom: 10%;
   cursor: pointer;
 }
 
+.intro-wrapper {
+  display: grid;
+  grid-template-rows: 70% 30%;
+  height: 100%;
 
-.intro-box {
+}
+
+.district-box {
   margin: 2%;
   border-radius: 6px;
   color: white;
 }
 
 
-.intro-title {
+.title-title {
   text-shadow: rgb(17, 17, 17) 2px 2px 10px;
 
   border-radius: 6px;
-  font-size: 26px;
+  font-size: 22px;
   width: 60%;
   margin-left: 20%;
   margin-right: 20%;
   text-align: center;
 }
 
-
-.intro-info {
+.intro-title-text {
   width: 80%;
   margin-left: 8%;
   margin-right: 8%;
   text-shadow: rgb(17, 17, 17) 2px 2px 10px;
   border-radius: 6px;
   text-align: center;
-  font-size: 20px;
+  font-size: 28px;
   padding: 2%;
 }
 
 .main-wrapper {
   height: 100%;
   display: grid;
-  grid-template-rows: 70% 30%;
+  grid-template-rows: 75% 25%;
 }
 
 .main-box {
@@ -81,10 +84,27 @@ body {
   margin: 2%;
   border-radius: 6px;
   display: grid;
-  grid-template-rows: 80% 20%;
+  grid-template-rows: 15% 85%;
+}
+.question-count-box {
+  margin-top: 5%;
+
+  width: 100%;
+  font-size: 18px;
+  height: 50%;;
+
+}
+
+.question-count {
+  width: 50%;
+  text-align: center;
+  margin-left: 25%;
+  margin-right: 25%;
 }
 
 .dropdown {
+  color: white;
+  display: block;
   width: 80%;
   margin-top: 9%;
   margin-left: 10%;
@@ -93,8 +113,7 @@ body {
   background: #832232;
   border-color: #832232;
   border-radius: 6px;
-  color: white;
-  font-size: 22px;
+  font-size: 18px;
   text-align: center;
   box-shadow: 0 0 3pt 2pt #832232;
 
@@ -104,14 +123,16 @@ body {
   border-color: #832232;
   box-shadow: 0 0 3pt 2pt #832232;
 }
-
+.dropdown:hover .dropdown-content {
+  display: block;
+}
 .dropdown.content:focus {
   border-color: #832232;
   box-shadow: 0 0 3pt 2pt #832232;
 }
 
 .dropdown-content {
-  display: none;
+  display: block;
   width: 80%;
   margin-left: 10%;
   margin-right: 10%;
@@ -119,8 +140,8 @@ body {
   background: #272727;
   position: absolute;
   min-width: 160px;
-  padding: 12px 16px;
   z-index: 1;
+  color: white;
 }
 .btn-box {
   width: 80%;
@@ -129,7 +150,7 @@ body {
 .btn-start {
   display: block;
   background: #832232;
-  font-size: 36px;
+  font-size: 18px;
   text-align: center;
   width: 50%;
   margin-left: 22.5%;
@@ -144,20 +165,18 @@ body {
   background: #832232;
 }
 
-.dropdown:hover .dropdown-content {
-  display: block;
-}
+
 
 .text-box {
   width: 90%;
   height: 80%;
-  margin-top: 10%;
   margin-bottom: 10%;
   margin-left: 5%;
   margin-right: 5%;
-  font-size: 30px;
+  font-size: 24px;
   word-wrap: break-word;
   text-align: center;
+ 
 }
 
 .progress-box {
@@ -209,7 +228,7 @@ body {
   border-radius: 12px;
   text-align: center;
   cursor: pointer;
-  font-size: 22px;
+  font-size: 18px;
 }
 
 .btn:hover {
@@ -221,12 +240,14 @@ body {
   display: grid;
   grid-auto-rows: auto;
   height: 100%;
+  width: 100%;
+  font-size: 16px;
 }
 
 
 .all-question-title {
   text-shadow: rgb(17, 17, 17) 2px 2px 10px;
-  font-size: 30px;
+  font-size: 26px;
   padding: 2%;
 }
 .all-questions-btn-box {
@@ -235,7 +256,7 @@ body {
   margin-right: 20%;
   padding: 2.5%;
   text-align: center;
-  font-size: 28px;
+  font-size: 24px;
 }
 
 .btn-continue {
@@ -258,22 +279,43 @@ body {
   font-size: 22px;
 }
 
-.container input:checked ~ .checkmark {
-  background-color: #2196F3;
+.all-questions-header{
+  display: grid;
+  grid-template-columns: 80% 20%;
+}
+.container input {
+  display: none;
+}
+.all-questions-row {
+  display: grid;
+  grid-template-columns: 80% 20%;
+  border: dashed 0.5px rgba(160, 159, 159, 0.363);
+}
+.all-questions-answer-box {
+  -ms-grid-row-align: center;
+ -ms-grid-column-align: center;
+ -webkit-align-items: center;
+    -webkit-box-align: center;
+    text-align: center;
+    align-items: center;
 }
 
-/* Create the checkmark/indicator (hidden when not checked) */
+p .all-questions-answer {
+  margin: 0;
+}
+input[type="radio"] {
+  display: none;
+}
+
 .checkmark:after {
   content: "";
   position: absolute;
-  display: none;
 }
 
 .questions-label {
   padding: 5%;
 }
 .questions-label-selected {
-  padding: 5%;
   box-shadow: 0 0 3pt 2pt #a1273c;
 }
 
@@ -286,21 +328,16 @@ input[type="radio"] {
 .results-box {
   background: rgb(43, 37, 37);
   top: 0;
-  padding-top: 2%;
-  padding-bottom: 2%;
-
-  height: auto;
+  width: 100%;
 }
 
 .results {
-  text-shadow: rgb(17, 17, 17) 2px 2px 10px;
   padding: 0;
-  margin-top: 4%;
+  margin-top: 0;
   margin-left: 4%;
   margin-right: 4%;
-  height: 100%;
   background: rgb(43, 37, 37);
-  font-size: 22px;
+  font-size: 20px;
   word-wrap: break-word;
   display:grid;
   grid-auto-rows: auto;
@@ -311,75 +348,74 @@ input[type="radio"] {
   margin: 4%;
 
 }
-
+.results-sum-box {
+  width: 100%;
+}
 .results-name {
+  float: left;
+  color: white;
   margin: 0;
 }
 .results-sum {
   width: 100%;
   margin: 0;
+  text-align: right;
+  font-size: 32px;
 }
 .results-row {
+  display: grid;
+  height: 100%;
+  grid-template-columns: 30% 70%;
   cursor: pointer;
+  border-bottom: dashed 0.5px rgba(124, 124, 124, 0.336);
 }
 
-.results-row:hover {
-  background: rgba(220, 20, 60, 0.596);
-}
-
-.profile-wrapper {
-  height: 90vh;
+.results-row-header {
   display: grid;
-  grid-template-rows: 20% 10% 60%;
-  grid-row-gap: 5%;
-}
-
-.results-header {
-  padding: 5%;
-  height: auto;
-  font-size: 25px;
-  border-radius: 6px;
-  display: grid;
+  font-size: 20px;
   grid-template-columns: 20% 20% 20% 20% 20%;
   grid-template-rows: 20% 20% 20% 20% 20%;
-  background: #0f0c19;
+  background: rgb(15, 15, 15);
+  padding: 2%;
+  padding-left: 6%;
+  padding-right: 6%;
+}
+.results-name-box-name {
+  padding: 4%;
+  display: grid;
+  grid-template-rows: 40% 60%;
 }
 
+.results-name-box {
+  padding: 4%;
+  display: inline-block;
+}
 
-.results-image {
-  grid-column: 1/2;
-  grid-row: 1/5;
-  border-radius: 50%;
-  width: 100px;
-  height: 100px;
+.thumb-icon {
+  margin-left: 3%;
+  float: left;
   position: relative;
+  color: rgb(13, 179, 13);
+  font-size: 13px;
 }
+.thumb-icon-expand {
+  margin-left: 15%;
+  margin-top: 15%;
+  position: relative;
+  color: rgb(13, 179, 13);
+  font-size: 13px;
 
-.candidate-image {
-  max-width: 100%;
-  border-radius: 50%;
-  width: 100px;
-  height: 100px;
 }
+.thumb-icon-select {
+  margin-top: 15%;
+  position: relative;
+  color: rgb(13, 179, 13);
+  font-size: 30px;
 
-.results-name {
-  margin: 0;
-  grid-column: 3/6;
-  grid-row: 2/2;
 }
-
-.results-sum {
-  font-size: 36px;
-  grid-column: 4/6;
-  grid-row: 5/6;
+.results-row:hover {
+  background: crimson;
 }
-
-.results-status {
-  font-size: 16px;
-  grid-column: 3/6;
-  grid-row: 3/3;
-}
-
 
 .light-preference {
   border-radius: 4px;
@@ -508,7 +544,7 @@ p {
 
 .results-compare-row {
   display: grid;
-  grid-template-columns: 65% 17.5% 17.5%;
+  grid-template-columns: 60% 20% 20%;
   -webkit-align-items: center;
   -webkit-box-align: center;
 }
@@ -516,7 +552,7 @@ p {
   font-size: 16px;
  height: auto;
  display: grid;
- grid-template-columns: 65% 17.5% 17.5%;
+ grid-template-columns: 60% 20% 20%;
  -ms-grid-row-align: center;
  -ms-grid-column-align: center;
  -webkit-align-items: center;
@@ -527,6 +563,7 @@ p {
  text-align: center;
  align-items: center;
 }
+
 .results-questions-row {
   text-align: center;
   display: grid;
@@ -536,11 +573,17 @@ p {
   
 }
 
-.question {
-  text-align: center;
-
-  height: auto;
+.question-box {
+  display: grid;
+  grid-template-columns: 85% 15%;
   padding: 5%;
+
+}
+
+.question {
+  text-align: left;
+  display: inline-block;
+  position: relative;
 }
 
 .my-answer {
@@ -553,7 +596,9 @@ p {
 .candidate-answer {
   -ms-grid-row-align: center;
   -ms-grid-column-align: center;
-  
+  text-align: center;
+  padding: 5%;
+
 }
 .shade-light {
   background: rgb(212, 212, 212);
@@ -563,4 +608,33 @@ p {
 .shade-dark {
   color: white;
   background: #272727;
+}
+
+
+.profile-wrapper {
+  height: 90vh;
+  display: grid;
+  grid-template-rows: 20% 10% 60%;
+  grid-row-gap: 5%;
+}
+
+.results-image {
+  
+
+  padding: 4%;
+  border-radius: 50%;
+  position: relative;
+}
+
+.candidate-image {
+  max-width: 100%;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+}
+
+
+.results-status {
+  font-size: 12px;
+
 }
