--- a/kalkulacka/poslanci.css
+++ b/kalkulacka/poslanci.css
@@ -15,7 +15,7 @@ body {
     rgba(0, 0, 0, 0.7)
   ), url("https://a-static.projektn.sk/2018/11/TBEN7754.jpg");
   background-clip: content-box;
-  background-size: 300%;
+  background-size: 350%;
   background-position: 40%;
 }
 
@@ -23,8 +23,9 @@ body {
   width: 100%;
   height: 100vh;
   color: white;
-  
 }
+
+
 
 .btn-back {
   color: white;
@@ -81,7 +82,23 @@ body {
   text-shadow: rgb(17, 17, 17) 2px 2px 10px;
   margin: 2%;
   border-radius: 6px;
-  
+  display: grid;
+  grid-template-rows: 15% 85%;
+}
+.question-count-box {
+  margin-top: 5%;
+
+  width: 100%;
+  font-size: 18px;
+  height: 50%;;
+
+}
+
+.question-count {
+  width: 50%;
+  text-align: center;
+  margin-left: 25%;
+  margin-right: 25%;
 }
 
 .dropdown {
@@ -152,7 +169,6 @@ body {
 .text-box {
   width: 90%;
   height: 80%;
-  margin-top: 10%;
   margin-bottom: 10%;
   margin-left: 5%;
   margin-right: 5%;
@@ -223,6 +239,7 @@ body {
   display: grid;
   grid-auto-rows: auto;
   height: 100%;
+  width: 100%;
   font-size: 16px;
 }
 
@@ -261,22 +278,43 @@ body {
   font-size: 22px;
 }
 
-.container input:checked ~ .checkmark {
-  background-color: #2196F3;
+.all-questions-header{
+  display: grid;
+  grid-template-columns: 80% 20%;
+}
+.container input {
+  display: none;
+}
+.all-questions-row {
+  display: grid;
+  grid-template-columns: 80% 20%;
+  border: dashed 0.5px rgba(160, 159, 159, 0.363);
+}
+.all-questions-answer-box {
+  -ms-grid-row-align: center;
+ -ms-grid-column-align: center;
+ -webkit-align-items: center;
+    -webkit-box-align: center;
+    text-align: center;
+    align-items: center;
 }
 
-/* Create the checkmark/indicator (hidden when not checked) */
+p .all-questions-answer {
+  margin: 0;
+}
+input[type="radio"] {
+  display: none;
+}
+
 .checkmark:after {
   content: "";
   position: absolute;
-  display: none;
 }
 
 .questions-label {
   padding: 5%;
 }
 .questions-label-selected {
-  padding: 5%;
   box-shadow: 0 0 3pt 2pt #a1273c;
 }
 
@@ -289,21 +327,17 @@ input[type="radio"] {
 .results-box {
   background: rgb(43, 37, 37);
   top: 0;
-  padding-top: 2%;
-  padding-bottom: 2%;
-
-  height: auto;
+  height: 100%;
 }
 
 .results {
   text-shadow: rgb(17, 17, 17) 2px 2px 10px;
   padding: 0;
-  margin-top: 4%;
+  margin-top: 0;
   margin-left: 4%;
   margin-right: 4%;
-  height: 100%;
   background: rgb(43, 37, 37);
-  font-size: 22px;
+  font-size: 20px;
   word-wrap: break-word;
   display:grid;
   grid-auto-rows: auto;
@@ -316,6 +350,8 @@ input[type="radio"] {
 }
 
 .results-name {
+  float: left;
+  color: white;
   margin: 0;
 }
 .results-sum {
@@ -326,8 +362,46 @@ input[type="radio"] {
   display: grid;
   grid-template-columns: 80% 20%;
   cursor: pointer;
+  border-bottom: dashed 0.5px rgba(124, 124, 124, 0.336);
 }
 
+.results-row-header {
+  display: grid;
+  font-size: 20px;
+  grid-template-columns: 80% 20%;
+  background: rgb(15, 15, 15);
+  padding: 2%;
+  padding-left: 6%;
+  padding-right: 6%;
+}
+
+.results-name-box {
+  display: inline-block;
+  position: relative;
+}
+
+.thumb-icon {
+  margin-left: 3%;
+  float: left;
+  position: relative;
+  color: rgb(13, 179, 13);
+  font-size: 13px;
+}
+.thumb-icon-expand {
+  margin-left: 15%;
+  margin-top: 15%;
+  position: relative;
+  color: rgb(13, 179, 13);
+  font-size: 13px;
+
+}
+.thumb-icon-select {
+  margin-top: 15%;
+  position: relative;
+  color: rgb(13, 179, 13);
+  font-size: 30px;
+
+}
 .results-row:hover {
   background: crimson;
 }
@@ -488,10 +562,17 @@ p {
   
 }
 
-.question {
-  text-align: center;
-
+.question-box {
+  display: grid;
+  grid-template-columns: 85% 15%;
   padding: 5%;
+
+}
+
+.question {
+  text-align: left;
+  display: inline-block;
+  position: relative;
 }
 
 .my-answer {
@@ -504,7 +585,9 @@ p {
 .candidate-answer {
   -ms-grid-row-align: center;
   -ms-grid-column-align: center;
-  
+  text-align: center;
+  padding: 5%;
+
 }
 .shade-light {
   background: rgb(212, 212, 212);
