--- a/kalkulacka/poslanci.css
+++ b/kalkulacka/poslanci.css
@@ -75,7 +75,7 @@ body {
 .main-wrapper {
   height: 100%;
   display: grid;
-  grid-template-rows: 75% 25%;
+  grid-template-rows: 70% 30%;
 }
 
 .main-box {
@@ -87,7 +87,7 @@ body {
 }
 .question-count-box {
   margin-top: 5%;
-
+  margin-bottom: 4%;
   width: 100%;
   font-size: 18px;
   height: 50%;;
@@ -148,20 +148,22 @@ body {
 }
 .btn-start {
   display: block;
-  background: #832232;
+  background: #c32640;
   font-size: 18px;
   text-align: center;
   width: 50%;
   margin-left: 22.5%;
   margin-right: 22.5%;
-  padding: 2%;
+  padding: 4%;
   border-radius: 6px;
   cursor: pointer;
+  border-color: maroon;
+  
 }
 
 .btn-start:hover {
 
-  background: #832232;
+  background: #c32640;
 }
 
 
@@ -211,7 +213,6 @@ body {
 
 .buttons-box {
   text-shadow: rgb(17, 17, 17) 2px 2px 10px;
-  
   width: 100%;
   display: grid;
   grid-template-rows: 25% 25% 25%;
@@ -219,11 +220,12 @@ body {
 }
 
 .btn {
-  background: #832232;
+  background: #c32640;
   color: white;
   
   margin-left: 25%;
   margin-right: 25%;
+  padding: 2%;
   border-radius: 12px;
   text-align: center;
   cursor: pointer;
@@ -231,7 +233,7 @@ body {
 }
 
 .btn:hover {
-  background: rgb(43, 37, 37);
+  background: maroon;
 }
 
 .all-questions-wrapper{
@@ -269,6 +271,7 @@ body {
   width: 100%;
   cursor: pointer;
   color: white;
+
 }
 
 
