--- a/kalkulacka/style.css
+++ b/kalkulacka/style.css
@@ -166,17 +166,15 @@ body {
 }
 
 
-
 .text-box {
-  width: 90%;
+  width: 80%;
   height: 80%;
-  margin-bottom: 10%;
-  margin-left: 5%;
-  margin-right: 5%;
-  font-size: 24px;
+  margin: 10%;
+  font-size: 26px;
   word-wrap: break-word;
-  text-align: center;
- 
+  text-align: left;
+  text-shadow: rgb(17, 17, 17) 2px 2px 10px;
+
 }
 
 .progress-box {
