--- a/kalkulacka/style.css
+++ b/kalkulacka/style.css
@@ -210,25 +210,51 @@ body {
 
 .buttons-box {
   text-shadow: rgb(17, 17, 17) 2px 2px 10px;
-  
   width: 100%;
   display: grid;
   grid-template-rows: 25% 25% 25%;
   grid-row-gap: 8%;
 }
+
 .btn {
+  display: block;
   background: #c32640;
-  color: white;
-  
+  font-size: 18px;
+  text-align: center;
+  width: 50%;
   margin-left: 25%;
   margin-right: 25%;
   padding: 2%;
+  border-radius: 6px;
+  cursor: pointer;
+  
+  padding-top: 4%;
   border-radius: 12px;
   text-align: center;
   cursor: pointer;
   font-size: 18px;
 }
 
+@media (min-width: 400px) {
+ 
+.btn {
+  display: block;
+  background: #c32640;
+  font-size: 18px;
+  text-align: center;
+  width: 50%;
+  margin-left: 25%;
+  margin-right: 25%;
+  padding: 2%;
+  border-radius: 6px;
+  cursor: pointer;
+  
+  border-radius: 12px;
+  text-align: center;
+  cursor: pointer;
+  font-size: 18px;
+}
+}
 .btn:hover {
   background: maroon;
 }
