--- a/kalkulacka/poslanci.css
+++ b/kalkulacka/poslanci.css
@@ -265,9 +265,7 @@ body {
   font-size: 24px;
 }
 
-.all-questions-btn-box:hover {
-  background: maroon;
-}
+
 
 .btn-continue {
   background: #832232;
@@ -324,7 +322,12 @@ input[type="radio"] {
 }
 
 .questions-label {
+  cursor: pointer;
   padding: 5%;
+}
+.questions-label:hover {
+  background: #83223260;
+
 }
 .questions-label-selected {
   box-shadow: 0 0 3pt 2pt #a1273c;
@@ -415,7 +418,8 @@ input[type="radio"] {
 
 }
 .results-row:hover {
-  background: crimson;
+  background: #83223260;
+
 }
 
 .light-preference {
@@ -582,7 +586,7 @@ p {
 }
 
 .question {
-  text-align: left;
+  text-align: center;
   display: inline-block;
   position: relative;
 }
