--- a/kalkulacka/style.css
+++ b/kalkulacka/style.css
@@ -369,26 +369,6 @@ input[type="radio"] {
   font-size: 32px;
 }
 
-@media (max-width: 400px) {
-  .results {
-    padding: 0;
-    margin-top: 0;
-    margin-left: 4%;
-    margin-right: 4%;
-    background: rgb(43, 37, 37);
-    font-size: 18px;
-    word-wrap: break-word;
-    display:grid;
-    grid-auto-rows: auto;
-  }
-  .results-sum {
-    width: 100%;
-    margin: 0;
-    text-align: right;
-    font-size: 24px;
-  }
-  
-}
 
 .results-row {
   display: grid;
@@ -666,4 +646,35 @@ p {
 .results-status {
   font-size: 12px;
 
+}
+
+@media (max-width: 400px) {
+  .results {
+    padding: 0;
+    margin-top: 0;
+    margin-left: 4%;
+    margin-right: 4%;
+    background: rgb(43, 37, 37);
+    font-size: 18px;
+    word-wrap: break-word;
+    display:grid;
+    grid-auto-rows: auto;
+  }
+  .results-sum {
+    width: 100%;
+    margin: 0;
+    text-align: right;
+    font-size: 24px;
+  }
+  
+.text-box {
+  width: 80%;
+  height: 80%;
+  margin: 10%;
+  font-size: 22px;
+  word-wrap: break-word;
+  text-align: left;
+  text-shadow: rgb(17, 17, 17) 2px 2px 10px;
+
+}
 }
