--- a/kalkulacka/poslanci.css
+++ b/kalkulacka/poslanci.css
@@ -356,7 +356,7 @@ input[type="radio"] {
   word-wrap: break-word;
   display:grid;
   grid-auto-rows: auto;
-  grid-row-gap: 1%;
+  grid-row-gap: 0.5%;
 }
 
 .ul-results {
@@ -613,4 +613,19 @@ p {
 .shade-dark {
   color: white;
   background: #272727;
+}
+
+
+@media (max-width: 400px) {
+  
+  .text-box {
+    width: 80%;
+    height: 80%;
+    margin: 10%;
+    font-size: 22px;
+    word-wrap: break-word;
+    text-align: left;
+    text-shadow: rgb(17, 17, 17) 2px 2px 10px;
+  
+  }
 }
